kubernetes/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: registry.gitlab.com/baddikiran/craftista:products-1.0.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
        - containerPort: 5900
