kubernetes/recommendations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
spec:
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      containers:
      - name: recommendations
        image: registry.gitlab.com/baddikiran/craftista:recommendations-1.0.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "200Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
