kubernetes/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
  - name: 'products' 
    port: 5900
    targetPort: 5900
  type: ClusterIP
