kubernetes/recommendations-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendations
spec:
  selector:
    app: recommendations
  ports:
  - port: 9000
    targetPort: 9000
  type: ClusterIP
