kubernetes/voting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: voting
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
